--- a/1.Python/Python Set Question 1/Coding-Set 1 -Solution.ipynb
+++ b/1.Python/Python Set Question 1/Coding-Set 1 -Solution.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "id": "11b68af9-84dc-45cd-9c00-290b70ffe3c0",
    "metadata": {},
    "outputs": [
@@ -157,14 +157,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the Number 7\n"
+      "Enter the Number 8\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7 is a prime number.\n"
+      "8 is not a prime number.\n"
      ]
     }
    ],
@@ -176,7 +176,7 @@
     "    if (num <= 1):\n",
     "        return False\n",
     "\n",
-    "    for i in range(2, num):\n",
+    "    for i in range(2, int(num ** 0.5) + 1):\n",
     "        if num % i == 0:\n",
     "            return False\n",
     "    return True\n",
